--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,5 @@
 @import './additionBar.scss';
 @import './button.scss';
 @import './table.scss';
+@import './scoreControl.scss';
 @import './normilize';
