--- a/src/styles/_normilize.scss
+++ b/src/styles/_normilize.scss
@@ -1,3 +1,9 @@
 body {
   margin: 0;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
